--- a/buildspec.yml
+++ b/buildspec.yml
@@ -55,3 +55,7 @@ artifacts:
 env:
   parameter-store:         
     JWT_SECRET: JWT_SECRET
+pre_build:
+commands:
+  - pip3 install -r requirements.txt 
+  - python3 -m pytest test_main.py
